<resources>
    <string name="app_name">The Money Tree</string>
    <string name="loading">Loading....</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="uploadImages">Set your image</string>
    <string name="buffering_string">Buffering&#8230;</string>
    <string name="playbackComplete">Playback completed.</string>
    <string name="pickFile">Pick file</string>
    <string name="uploadFile">Upload file</string>
    <string name="toastPickFileError">Unable to pick file. Check status of file manager.</string>
    <string name="login_button">Sign In</string>
    <string name="user_name">User Name (Email)</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="err_msg_password">Invalid Password</string>
    <string name="no_input_msg_password">Please Enter Password</string>
    <string name="err_msg_id">Invalid Login ID</string>
    <string name="no_input_msg_id">Please Enter Login ID</string>
    <string name="err_msg_server">Server Error</string>
    <string name="err_msg_wrong_details_server">Username/Password is incorrect</string>
    <string name="nav_home">Home</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="granted_permission">Granted Permission</string>
    <string name="forgotPasswordMsg">Please Enter UserName here to receive temporary password in your email</string>
    <string name="resetPassword">Reset Password</string>
    <string name="backtoLoginScreen">Back</string>
    <string name="privacy_policy"><![CDATA[<br><br>
        We built the <b>MoneyTree</b> app as a <b>Freemium app.</b><br><br>
        This <b>SERVICE</b> is provided by us at no cost and is intended for use as is.<br><br>
        This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.<br>
        If you choose to use our Service, then you agree to the collection and use of information in relation to this policy.<br>
        The Personal Information that we collect is used for providing and improving the Service.
        We will not use or share your information with anyone except as described in this Privacy Policy.
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at MoneyTree unless otherwise defined in this Privacy Policy.<br><br>
        <b>Information Collection and Use</b> <br> <br>

        For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information.
        The information that we request will be stored with us and will ot be put to any other use other than enhancing application usability.If you wish to opt out of this collection please do not use this application.
        The app does use third party services that may collect information used to identify you.
        Link to privacy policy of third party service providers used by the app is available on Google Play Services  <br><br>

        <b>Log Data</b><br><br>
        We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data.<br>
        This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.<br><br>

        <b>Cookies</b><br><br>
        Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers.
        These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
        This Service does not use these “cookies” explicitly.
        However, the app may use third party code and libraries that use “cookies” to collect information and improve their services.
        You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device.
        If you choose to refuse our cookies, you may not be able to use some portions of this Service.<br><br>

        <b>Service Providers</b><br><br>
        We may employ third-party companies and individuals due to the following reasons:<br><br>
        <ul>
        <li>To facilitate our Service;</li><br>
        <li>To provide the Service on our behalf;</li><br>
        <li>To perform Service-related services;</li><br>
        <li>To assist us in analyzing how our Service is used.</li><br>
        </ul>
        We want to inform users of this Service that these third parties have access to your Personal Information.
        The reason is to perform the tasks assigned to them on our behalf.
        However, they are obligated not to disclose or use the information for any other purpose.<br><br>
        <b>Security</b><br><br><br>
        We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.<br>
        But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
        <br><br><b>Links to Other Sites</b><br><br>
        This Service may contain links to other sites.<br>
        If you click on a third-party link, you will be directed to that site.<br>
        Note that these external sites are not operated by us.
        Therefore, we strongly advise you to review the Privacy Policy of these websites.<br>
        We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.<br><br><br>
        <b>Children’s Privacy</b><br><br><br>
        These Services do not address anyone under the age of <b>13</b>.<br><br>
        We do not knowingly collect personally identifiable information from children under 13.
        In the case, we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers.
        If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.<br><br>
        <b>Changes to This Privacy Policy</b><br><br><br>
        We may update our Privacy Policy from time to time.<br>
        Thus, you are advised to review this page periodically for any changes.
        We will notify you of any changes by posting the new Privacy Policy on this page.
        These changes are effective immediately after they are posted on this page.
        <br><br><b>Contact Us</b><br><br>
        If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <br><b>colioinc32@gmail.com</b>]]></string>
    <string name="about_us"><![CDATA[<br><br>We are a group of like minded individuals who wish to sort out some part of your complex College Life.For more info and suggestions -<br><br><b>Please Contact us</b><br><br><b>colioinc32@gmail.com</b><br><br>]]></string>
</resources>