<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_expenditure"
            android:icon="@drawable/ic_home_black"
            android:title="Expenditure" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/img_login_person"
            android:title="@string/nav_sign_out" />
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/nav_privacy_policy" />
        </menu>
    </item>
</menu>