<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/img_appIcon_forgotPassword"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin25"
        app:srcCompat="@drawable/ic_m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin25"
        android:padding="10dp"
        android:text="@string/forgotPassword"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSize_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_appIcon_forgotPassword" />

    <TextView
        android:id="@+id/txt_info_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin25"
        android:layout_marginBottom="10dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/forgotPasswordMsg"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSize_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_forgotPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_info_forgotPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button -->

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin25"
        android:background="@color/colorAccent"
        android:text="@string/resetPassword"
        android:textSize="@dimen/textSize_20"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_email"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:text="@string/backtoLoginScreen"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_reset_password"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="gone"
        android:elevation="@dimen/elevation_2"
        app:layout_constraintBottom_toBottomOf="@id/btn_reset_password"
        app:layout_constraintEnd_toEndOf="@id/btn_reset_password"
        app:layout_constraintStart_toStartOf="@id/btn_reset_password"
        app:layout_constraintTop_toTopOf="@id/btn_reset_password" />
</androidx.constraintlayout.widget.ConstraintLayout>